# llm-rag-agent-example

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  bootstrap-dev-env.ps1  compose.devcontainer.yaml  compose.yaml  project.code-workspace
backend/: .gitignore  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/server/: main.py
frontend/.devcontainer/: devcontainer.json
infra/: provision-dev-env.ps1
infra/_provision/: provision-dev-env-all.ps1  provision-dev-env-wsl.sh  provision-dev-env.ps1  provision-wsl.sh
infra/_provision/ansible/: site.yml
infra/_provision/ansible/group_vars/: all.yml.example
infra/_provision/ansible/roles/prepare_common/tasks/: main.yml
infra/_provision/ansible/roles/prepare_container_db/defaults/: main.yml
infra/_provision/ansible/roles/prepare_container_db/tasks/: main.yml
infra/_provision/ansible/roles/prepare_container_llmproxy/defaults/: main.yml
infra/_provision/ansible/roles/prepare_container_llmproxy/tasks/: main.yml
infra/_provision/ansible/roles/prepare_container_redmine/defaults/: main.yml
infra/backend/: Dockerfile
infra/db/: Dockerfile
infra/db/initdb.d/: 01_create_databases.sh
infra/db/scripts/: backup-db.sh  restore-db.sh
infra/frontend/: Dockerfile  Dockerfile.init
infra/llmproxy/: Dockerfile
infra/llmproxy/config/: config.yaml
infra/llmproxy/scripts/: entrypoint.sh
infra/provision/: provision-wsl.sh  provision.sh
infra/provision/ansible/: site.yml
infra/redmine/: Dockerfile
infra/redmine/scripts/: setup-redmine.sh
(+15 files in other folders)
