[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
indent-width = 4
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
